--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,13 @@
   },
   "homepage": "https://github.com/jmschrack/Audiomancer-DiscordBot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "ffmpeg-static": "^4.4.0",
+    "node-fetch": "^2.6.1",
+    "opusscript": "^0.0.8",
+    "tweetnacl": "^1.0.3",
+    "ytdl-core": "^4.9.0"
   }
 }
